typo in comment
etract -> extract

--- a/2019/Images.ipynb
+++ b/2019/Images.ipynb
@@ -74,7 +74,7 @@
     "batchSize = 37 * 2\n",
     "numImages = 352758\n",
     "\n",
-    "# Iterate over images in tar, etract, predict, persist results\n",
+    "# Iterate over images in tar, extract, predict, persist results\n",
     "with tarfile.open(input_path + '/imagesThumbnails/testThumbnails.tar') as thumbnails:\n",
     "    with open(output_path + '/catability.csv', 'w') as out:\n",
     "        for batch in tqdm_notebook(range(int(numImages / batchSize))):\n",
